# paper_2024

./: .gitignore  README.md  onnxmlir-build-withPA.sh  onnxmlir-build-withTA.sh  onnxmlir-build.sh
PA/: CMakeLists.txt  PAAccelerator.cpp  PAAccelerator.hpp  README.md
PA/Compiler/: CMakeLists.txt  PACompilerOptions.cpp  PACompilerOptions.hpp  PACompilerUtils.cpp  PACompilerUtils.hpp
PA/Conversion/: CMakeLists.txt
PA/Conversion/CoreOpt/: CMakeLists.txt  CoreOpt.cpp  CoreOpt.td
PA/Conversion/CoreToMLIR/: CMakeLists.txt  CoreToMLIR.cpp  CoreToMLIR.td
PA/Conversion/ONNXToRefine/: CMakeLists.txt  ONNXToRefine.cpp  ONNXToRefine.td
PA/Conversion/RefineToCore/: CMakeLists.txt  RefineToCore.cpp  RefineToCore.td
PA/Conversion/RefineUppering/: CMakeLists.txt  RefineUppering.cpp  RefineUppering.td
PA/Dialect/: CMakeLists.txt
PA/Dialect/Core/: CMakeLists.txt  Core.td  CoreOps.cpp  CoreOps.hpp
PA/Dialect/Core/CoreOps/: CMakeLists.txt  ShapeHelper.hpp
PA/Dialect/Core/CoreOps/Alloc/: Alloc.cpp  CMakeLists.txt  CoreAlloc.td
PA/Dialect/Core/CoreOps/Read/: CMakeLists.txt  CoreRead.td  Read.cpp
PA/Dialect/Core/CoreOps/Start/: CMakeLists.txt  CoreStart.td  Start.cpp
PA/Dialect/Core/CoreOps/Wait/: CMakeLists.txt  CoreWait.td  Wait.cpp
PA/Dialect/Core/CoreOps/Write/: CMakeLists.txt  CoreWrite.td  Write.cpp
PA/Dialect/Refine/: CMakeLists.txt  Refine.td  RefineOps.cpp  RefineOps.hpp
PA/Dialect/Refine/RefineOps/: CMakeLists.txt  ShapeHelper.hpp
PA/Dialect/Refine/RefineOps/Add/: Add.cpp  CMakeLists.txt  RefineAdd.td
PA/Dialect/Refine/RefineOps/Concat/: CMakeLists.txt  Concat.cpp  RefineConcat.td
PA/Dialect/Refine/RefineOps/Conv/: CMakeLists.txt  Conv.cpp  RefineConv.td
PA/Dialect/Refine/RefineOps/Div/: CMakeLists.txt  Div.cpp  RefineDiv.td
PA/Dialect/Refine/RefineOps/FusedConv/: CMakeLists.txt  FusedConv.cpp  RefineFusedConv.td
PA/Dialect/Refine/RefineOps/Maxpool/: CMakeLists.txt  Maxpool.cpp  RefineMaxpool.td
PA/Dialect/Refine/RefineOps/Mul/: CMakeLists.txt  Mul.cpp  RefineMul.td
PA/Dialect/Refine/RefineOps/Resize/: CMakeLists.txt  RefineResize.td  Resize.cpp
PA/Dialect/Refine/RefineOps/Sigmoid/: CMakeLists.txt  RefineSigmoid.td  Sigmoid.cpp
PA/Dialect/Refine/RefineOps/Slice/: CMakeLists.txt  RefineSlice.td  Slice.cpp
PA/Dialect/Refine/RefineOps/Softmax/: CMakeLists.txt  RefineSoftmax.td  Softmax.cpp
PA/Dialect/Refine/RefineOps/Split/: CMakeLists.txt  RefineSplit.td  Split.cpp
PA/Dialect/Refine/RefineOps/Sub/: CMakeLists.txt  RefineSub.td  Sub.cpp
PA/Dialect/Refine/RefineOps/Transpose/: CMakeLists.txt  RefineTranspose.td  Transpose.cpp
PA/Pass/: PAPasses.hpp
PA/Runtime/: CMakeLists.txt  PARuntime.c  PARuntime.cpp
TA/: CMakeLists.txt  TAAccelerator.cpp  TAAccelerator.hpp
TA/Compiler/: CMakeLists.txt  TACompilerOptions.cpp  TACompilerOptions.hpp  TACompilerUtils.cpp  TACompilerUtils.hpp
TA/Conversion/: CMakeLists.txt
TA/Conversion/ONNXToTest/: CMakeLists.txt  ONNXToTest.cpp  ONNXToTest.td  RewriteONNXForTest.cpp  RewriteONNXForTest.td
TA/Dialect/Test/: CMakeLists.txt  Test.td  TestOps.cpp  TestOps.hpp
TA/Dialect/Test/TestOps/: CMakeLists.txt  ShapeHelper.hpp
TA/Dialect/Test/TestOps/Add/: Add.cpp  CMakeLists.txt  TestAdd.td
TA/Pass/: TAPasses.hpp
TA/Runtime/: CMakeLists.txt  TARuntime.c
myexperiments/: README.md
myexperiments/TATest/: add.onnx  add.tmp  run.py  test.mlir  testadd.mlir
myexperiments/myAccelProto/: README.md
myexperiments/myAccelProto/run/: shared_memory_dump.cpp
myexperiments/myAccelProto/run/device/: c2h  h2c  readfile.c
myexperiments/myAccelProto/run/memory/: makebanks.sh
myexperiments/myAccelProto/src/: CMakeLists.txt  controller.cpp  controller.h  core.cpp  core.h  main.cpp  utils.cpp  utils.h
myexperiments/myAccelProto/src/operations/: add.cpp  add.h  conv.cpp  conv.h  div.cpp  div.h  maxpool.cpp  maxpool.h  mul.cpp  mul.h  sigmoid.cpp  sigmoid.h  softmax.cpp  softmax.h  sub.cpp  sub.h
myexperiments/yolov8n/: README.md  _1_part1.onnx  _3_part1.onnx  _9_part1.onnx  compare.py  image_yolo.py  make_specific_case_testmodel.py  makeconv.py  makemul.py  makesig.py  mnist-runPyRuntime.py  part1.onnx  run_conv_test.py  run_mul_test.py  run_sigmoid_test.py  runtimetest.c  yolo_split.py  yolov8n_static_pchn_qdq_S8S8_rr_m1.onnx  yolov8n_static_pchn_qop_S8S8_rr_m1.onnx
myexperiments/yolov8n/util/: _config.py  _utils.py  _yolo.py
