add_subdirectory(Conv)
add_subdirectory(Sigmoid)
add_subdirectory(Mul)
add_subdirectory(Split)
add_subdirectory(Add)
add_subdirectory(Concat)
add_subdirectory(Maxpool)
add_subdirectory(Resize)
add_subdirectory(Transpose)
add_subdirectory(Softmax)
add_subdirectory(Slice)
add_subdirectory(Sub)
add_subdirectory(Div)
add_subdirectory(FusedConv)
